--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <header>
       <img src="img/logo.png" class="logo" />
-      <h1>Front-End Web Development,<br />Fired Up</h1>
+      <h1>A man can be destroyed but <br />not defeated</h1>
 
-      <p>Flutter, Firebase, JavaScript, Node.js</p>
+      <p>Ernest Hemingway</p>
     </header>
 
     <main>
